--- a/src/input.css
+++ b/src/input.css
@@ -74,13 +74,18 @@ p {
 }
 
 .loader {
-  @apply w-12 h-12 border-4 border-t-transparent border-white rounded-full animate-spin;
+  @apply w-12 h-12 border-4 border-t-transparent rounded-full animate-spin;
 }
 .dark .loader {
   @apply border-white border-t-transparent;
 }
 :root:not(.dark) .loader {
   @apply border-gray-800 border-t-transparent;
+}
+
+/* Loading overlay */
+.loading-overlay {
+  @apply fixed inset-0 backdrop-blur-sm bg-black bg-opacity-10;
 }
 
 /* Dark mode */
