--- a/src/input.css
+++ b/src/input.css
@@ -83,9 +83,9 @@ p {
   @apply border-gray-800 border-t-transparent;
 }
 
-/* Loading overlay */
 .loading-overlay {
-  @apply fixed inset-0 backdrop-blur-sm bg-black bg-opacity-10;
+  @apply fixed inset-0 backdrop-blur-sm bg-black;
+  background-color: rgba(107, 114, 128, 0.1);
 }
 
 /* Dark mode */
