--- a/src/input.css
+++ b/src/input.css
@@ -72,7 +72,7 @@ p {
 
 .loading-overlay {
   @apply fixed inset-0 backdrop-blur-sm;
-  animation: fadeInOut 1s ease-in-out;
+  animation: fadeInOut 1s ease-in-out infinite;
   background-color: rgba(107, 114, 128, 0.1);
 }
 
@@ -168,6 +168,6 @@ p {
 }
 @keyframes fadeInOut {
   0% { opacity: 0; }
-  50% { opacity: 1; }
+  50% { opacity: 0.5; }
   100% { opacity: 0; }
 }
